T Compiler/tests/phase3tests/error/duplicateClass.t
class A 
{
  int i;
}

class B
{
  int j;
}

class A
{
  int k;
}

int main()
{
}
